<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_uwb_beacon_plugin</name>
  <version>0.0.0</version>
  <description>Plugin de Beacon UWB para Gazebo</description>
  <maintainer email="josloprui6@alum.us.es">Angela Rider Jimenez / Jose Francisco Lopez Ruiz</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  
  <depend>rclcpp</depend>
  <depend>gz-sim7</depend>
  <depend>gz-plugin2</depend>
  <depend>gz-common5</depend>
  <depend>gz-math7</depend>
  <depend>gz-transport12</depend>
  <depend>ros_gz_bridge</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <gz_sim gazebo_media_path="${prefix}" plugin_path="${prefix}/lib"/>
  </export>
</package>