<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beacon_eif_localization_msgs</name>
  <version>1.0.0</version>
  <description>
    Mensajes, servicios y acciones para el paquete Beacon-EIF-Localization
  </description>
  <maintainer email="josloprui6@alum.us.es">Angela Rider Jimenez / Jose Francisco Lopez Ruiz</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool and dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <!-- Execution dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>