<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beacon_eif_localization_pkg</name>
  <version>0.0.0</version>
  <description>Localizacion mediante balizas basada en el filtro extendido de informacion</description>
  <maintainer email="josloprui6@alum.us.es">Angela Rider Jimenez / Jose Francisco Lopez Ruiz</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
