<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beacon_eif_localization_pkg</name>
  <version>1.0.0</version>
  <description>Localizacion mediante balizas basada en el filtro extendido de informacion</description>
  <maintainer email="josloprui6@alum.us.es">Angela Rider Jimenez / Jose Francisco Lopez Ruiz</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <!-- Dependencias de tf2 -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Dependencias de mensajes custom -->
  <depend>beacon_eif_localization_msgs</depend>
  <depend>px4_msgs</depend>
  
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
